http and service plumbing
Small refactor to expand differ client into a full Matcher
implementation.
Introduce notifications http endpoint.
Wire notifier into the initialization control structure.
Introduce notifier into local dev environment.
